# Mini-REST-API

./: .gitignore  README.md  admin_routes.py  api_routes.py  database.py  main.py  pyproject.toml  routes.py  schemas.py  test_models.py  user_routes.py
migrations/versions/: 2c830e53edc2_increase_password_field_length.py  66de41bb5772_add_password_and_status_columns_to_.py  805ba5a4013e_initial_migration.py  9471643256aa_add_indexes_to_username_and_email_for_.py  bf0df41f4a46_increase_the_length_of_username_and_.py  eed5f32a7ac5_add_on_delete_cascade_to_notes_user_id.py  f6e57cf7d800_set_unique_field_to_true_for_user_.py
models/: note.py  user.py
static/: FormValidation.js  TogglePassword.js  addData.js  handleAddData.js  handleAddNote.js  handleDelete.js  handleLogin.js  handleLogout.js  handleRegister.js  handleUpdate.js  loadInfo.js  loadNoteInfo.js  loadNotes.js  loadObjects.js  loadUserInfo.js  loadUsers.js  style.css  utils.js
templates/: add_data.html  add_note.html  admin_index.html  index.html  login.html  note_info.html  register.html  user_index.html  user_info.html
tests/: test_api.py
